myprojects: spacing is good. need to fix image size.

--- a/src/css/MyProjects.css
+++ b/src/css/MyProjects.css
@@ -13,11 +13,20 @@
 .line1 hr {
 }
 
+.below_myprojects_heading {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 0 10%;
+
+}
+
 .my_projects_div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin: 0 10% 50px 10%;
+  justify-content: space-evenly;
+  /* margin: 0 10% 0px 10%; */
 }
 
 .projectBorderDiv {
@@ -29,13 +38,18 @@
   background-color: #FFFFFF; */
 }
 
-.projectDiv {
-  width: 100%;
+.projectBorderDiv {
+  width: 40%;
+  min-width: 300px;
+  margin-bottom: 50px;
+  /* margin: 0 10% 50px 10%; */
+
   /* margin: 0 0 30px 0; */
   /* margin: 0 10% 50px 10%; */
 
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 
   padding: ;
   border: 1pt solid #84A98C;
